kubernetes_resources/deployment.yaml
apiVersion: v1 # this service will expose mysql
kind: Service
metadata:
  name: userapi
spec:
  ports:
    - port: 8085 # you have port and targetport. remember that
      targetPort: 8085
  selector:
    app: userapi
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: userapi
  labels:
    app: userapi
spec:
  selector:
    matchLabels:
      app: userapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
        - name: userapi
          image: root/loginapp:0.0.1-SNAPSHOT
