kubernetes_resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-userapi
  annotations:
    ingress.kubernetes.io/rewrite-target: / #this means that the requests will be directed to this port
spec:
  rules:
      - http:
          paths:
            - path: /api/v1
              pathType: Prefix
              backend:
                service:
                  name: userapi
                  port:
                    number: 8085
